<resources>
    <string name="app_name">Training +</string>
    <string name="title_splash">Training +</string>
    <string name="email">email</string>
    <string name="password">senha</string>
    <string name="btn_login">Login</string>
    <string name="text_create_registry">Se não possui conta, crie uma clicando aqui!</string>
    <string name="user_name_label">Nome do usuário</string>
    <string name="email_label">email</string>
    <string name="password_label">senha</string>
    <string name="confirm_passowrd_label">confirme sua senha</string>
    <string name="txt_btn_register">Concluir</string>
    <string name="txt_btn_google">Google</string>
    <string name="txt_tv_label_google">Criar conta usando conta do google</string>
    <string name="hint_email_example">email@example.com</string>
    <string name="hint_password">**********</string>
    <string name="error_passwords">Senhas coincidem!</string>
    <string name="preference_file_key">KEY_PREFERNCES</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_erased">Deletar conta</string>
    <string name="menu_logout">Sair da Conta</string>
    <string name="msg_logout">Deslogado com Sucesso</string>
    <string name="inspiration_talk">Inicie sua rotina criando um novo ritmo</string>
    <string name="training">Treino</string>
    <string name="exercise">Exercícios</string>
    <string name="exercise_name_label">Nome do exercício</string>
    <string name="observations_label">Observações</string>
    <string name="hint_observations">Observações sobre o exercício</string>
    <string name="button_back_txt">voltar</string>
    <string name="button_create">criar</string>
    <string name="txt_list_exercisie">"Lista de Exercicios "</string>
    <string name="show_list">Exibir lista</string>
    <string name="txt_title_training">Treino</string>
    <string name="training_name_label">Nome do treino</string>
    <string name="ex_training">ex: Rotina Diurna</string>
    <string name="description">Descrição</string>
    <string name="date_training">Data do Treino</string>
    <string name="add_training">Adicionar Treino</string>
    <string name="show_training">Exibir treinos</string>
    <string name="effect">Monitore e crie novas rotinas!\n</string>
    <string name="add_img">Adicione uma imagem se preferir clicando aqui</string>
    <string name="txt_title_training_list">Lista dos Treinos</string>
</resources>