<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activitys.TrainingActivity">

    <ImageView
        android:id="@+id/imb_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_west_24"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_title_training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.055">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_name_label"
            android:textAlignment="textEnd"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_name_training"
            app:layout_constraintEnd_toEndOf="@+id/edt_name_training"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_name_training"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/edt_name_training"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/ex_training"
            android:background="@drawable/edt_default"
            android:inputType="text"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="textEnd"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_training_description"
            app:layout_constraintEnd_toEndOf="@+id/edt_training_description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_training_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/edt_training_description"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/description"
            android:inputType="text"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695"
            android:background="@drawable/edt_default"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.002">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_training"
            android:textAlignment="textEnd"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/edt_training_date"
            app:layout_constraintEnd_toEndOf="@+id/edt_training_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edt_training_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/edt_training_date"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="ex: dd/mm/yyyy"
            android:inputType="date"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/edt_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.695"
            tools:ignore="LabelFor" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/add_training"
        app:layout_constraintEnd_toEndOf="@+id/spinner_training"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_training"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <Spinner
        android:id="@+id/spinner_training"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_add_training"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_training" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_training"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_default_1"
        android:text="@string/add_training"
        app:layout_constraintEnd_toEndOf="@+id/rv_add_training"
        app:layout_constraintStart_toStartOf="@+id/rv_add_training"
        app:layout_constraintTop_toBottomOf="@+id/rv_add_training" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_show_trainings"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_default_2"
        android:textColor="@color/white"
        android:text="@string/show_training"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_training"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_add_training"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_training"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>